<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/locations"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/location">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/name"
            android:textSize="20sp" />
        
        <EditText
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/csplus"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lagitude_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/name_box">

        <TextView
            android:id="@+id/lagitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/lagitude"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_lagitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/_20_9997781"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitude_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/lagitude_box">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/longitude"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/_105_8169562"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadimage"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitude_box"
        android:onClick="loadImage"/>

</androidx.constraintlayout.widget.ConstraintLayout>